--- a/_config.yml
+++ b/_config.yml
@@ -12,17 +12,17 @@
 #    `--'   `----''--'   '--' `--'
 
 
-
+theme: jekyll-text-theme
 
 ## => Site Settings
 ##############################
-text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
-highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
+text_skin: dark # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
+highlight_theme: tomorrow-night-bright # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
-title   : Your Site Title
+title   : COMPASS
 description: > # this means to ignore newlines until "Language & timezone"
-  Your Site Description
+  End-to-end AO simulation tool using GPU acceleration
 
 
 ## => Language and Timezone
@@ -55,7 +55,7 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: user_name/repo_name
+repository: ANR-COMPASS/shesha
 repository_tree: master
 
 
