--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ author:
   name      : ANR-COMPASS
   url       :
   avatar    : # path or url of avatar image (square)
-  bio       : COMPASS a end-to-end AO simulation tool using GPU acceleration.
+  bio       : COMPASS, a end-to-end AO simulation tool using GPU acceleration.
   email     :
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
@@ -55,7 +55,7 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: ANR-COMPASS/shesha
+repository: ANR-COMPASS/compass-new
 repository_tree: master
 
 
