--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ theme: jekyll-text-theme
 ##############################
 text_skin: dark # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: tomorrow-night-bright # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : # the base hostname & protocol for your site e.g. https://www.someone.com
-baseurl : # does not include hostname
+url     : https://anr-compass.github.io # the base hostname & protocol for your site e.g. https://www.someone.com
+baseurl : /compass-new # does not include hostname
 title   : COMPASS
 description: > # this means to ignore newlines until "Language & timezone"
   End-to-end AO simulation tool using GPU acceleration
