--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ theme: jekyll-text-theme
 
 ## => Site Settings
 ##############################
-text_skin: dark # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
+text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: tomorrow-night-bright # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : https://anr-compass.github.io # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : /compass-new # does not include hostname
