--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
 repository: ANR-COMPASS/compass
-repository_tree: master
+repository_tree: main
 
 
 ## => Paths
