add "chmod a+w /srv/jekyll/Gemfile.lock"

--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -12,7 +12,7 @@ jobs:
       run: |
         docker run \
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll && JEKYLL_ENV=production jekyll build --future --config ./_config.yml"
+        jekyll/builder:latest /bin/bash -c "chmod a+w /srv/jekyll/Gemfile.lock && chmod 777 /srv/jekyll && JEKYLL_ENV=production jekyll build --future --config ./_config.yml"
     - name: Commit to Main
       uses: github-actions-x/commit@v2.1
       with:
