--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -22,6 +22,10 @@ jobs:
         force-add: 'true'
     - name: Deploy to gh-pages
       uses: docker://peaceiris/gh-pages:v2.5.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        push-branch: 'gh-pages'
+        publish_dir: ./_site
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
