--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -20,17 +20,17 @@ jobs:
         push-branch: 'main'
         commit-message: '[ Generate Jekyll Website ]'
         force-add: 'true'
-    - name: Deploy to gh-pages
-      uses: docker://peaceiris/gh-pages:v2.5.0
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        push-branch: 'gh-pages'
-        publish_dir: ./_site
-      env:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./_site
+    # - name: Deploy to gh-pages
+    #   uses: docker://peaceiris/gh-pages:v2.5.0
+    #   with:
+    #     github_token: ${{ secrets.GITHUB_TOKEN }}
+    #     push-branch: 'gh-pages'
+    #     publish_dir: ./_site
+    #   env:
+    #     ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+    #     PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+    #     PUBLISH_BRANCH: gh-pages
+    #     PUBLISH_DIR: ./_site
 #   build-and-deploy:
 #     strategy:
 #       matrix:
